--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -6,69 +6,135 @@
 			"projectName": "Armanipulator",
 			"projectDescription": "Rudimentary Robotic Arm Utilizing Pneumatic Leverage and Extensible Arduino Firmware",
 			"projectSubDesc": "For PLTW Engineering Design and Development",
-			"projectLanguage": ["C++"],
-			"projectLibraries": ["Arduino", "Stepper Motor HAL"],
+			"projectLanguage": [
+				"C++"
+			],
+			"projectLibraries": [
+				"Arduino",
+				"Stepper Motor HAL"
+			],
 			"projectAsset": "armanipulator.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/Armanipulator" }],
-			"projectStatus": { "status": "Archived", "reason": "(No Longer in Active Development)" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/Armanipulator"
+				}
+			],
+			"projectStatus": {
+				"status": "Archived",
+				"reason": "(No Longer in Active Development)"
+			}
 		},
 		{
 			"projectId": 1,
 			"projectName": "cnhasm",
 			"projectDescription": "CLI Assembler for a Custom 16-bit Assembly Architecture powered by Regular Expression Parsing",
 			"projectSubDesc": "For Rose-Hulman CSSE232: Computer Architecture",
-			"projectLanguage": ["C#"],
-			"projectLibraries": [".NET Core 3.1"],
+			"projectLanguage": [
+				"C#"
+			],
+			"projectLibraries": [
+				".NET Core 3.1"
+			],
 			"projectAsset": "cnhasm-noarch.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/cnhasm-noarch" }],
-			"projectStatus": { "status": "Finished" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/cnhasm-noarch"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 2,
 			"projectName": "UberUnit",
 			"projectDescription": "A consolidated, lightweight unit converter built for user convenience, with Firebase Integration for History and User Favorites",
 			"projectSubDesc": "For Rose-Hulman CSSE280",
-			"projectLanguage": ["HTML5", "Sass", "TypeScript"],
-			"projectLibraries": ["Angular", "Firebase (via @angular/fire)", "Bootstrap"],
+			"projectLanguage": [
+				"HTML5",
+				"Sass",
+				"TypeScript"
+			],
+			"projectLibraries": [
+				"Angular",
+				"Firebase (via @angular/fire)",
+				"Bootstrap"
+			],
 			"projectAsset": "Picture1.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/UberUnit" },
-				{ "linkType": "demo", "linkURL": "https://uberunit.faceftw.dev" },
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/UberUnit"
+				},
+				{
+					"linkType": "demo",
+					"linkURL": "https://uberunit.faceftw.dev"
+				},
 				{
 					"linkType": "misc",
 					"linkURL": "https://rosehulmanprojectvault.org/project/-Mcae1Wvtehq-J4saaLz",
 					"linkDesc": "ROSE-HULMAN PROJECT VAULT"
 				}
 			],
-			"projectStatus": { "status": "Finished" }
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 3,
 			"projectName": "*Creative Name Here* Architecture",
 			"projectDescription": "16-bit RISC Architecture With a Flexible Assembly Dialect and Efficient Performance",
 			"projectSubDesc": "For Rose-Hulman CSSE232 - Computer Architecture",
-			"projectLanguage": ["SystemVerilog"],
-			"projectLinks": [{ "linkType": "text", "text": "Private Repo (Academic Integrity)" }],
-			"projectStatus": { "status": "Finished (Private Work)" }
+			"projectLanguage": [
+				"SystemVerilog"
+			],
+			"projectLinks": [
+				{
+					"linkType": "text",
+					"text": "Private Repo (Academic Integrity)"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished (Private Work)"
+			}
 		},
 		{
 			"projectId": 4,
 			"projectName": "Joust (Remake)",
 			"projectDescription": "Remake of the 1982 Arcade Classic <em>Joust</em> by Williams Electronics in Java",
 			"projectSubDesc": "For Rose-Hulman CSSE220: Introduction to Object Oriented Programming",
-			"projectLanguage": ["Java 8"],
-			"projectLibraries": ["Java FX Graphics"],
+			"projectLanguage": [
+				"Java 8"
+			],
+			"projectLibraries": [
+				"Java FX Graphics"
+			],
 			"projectAsset": "joust.webp",
-			"projectLinks": [{ "linkType": "text", "text": "Private Repo (Academic Integrity)" }],
-			"projectStatus": { "status": "Finished (Private Work)" }
+			"projectLinks": [
+				{
+					"linkType": "text",
+					"text": "Private Repo (Academic Integrity)"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished (Private Work)"
+			}
 		},
 		{
 			"projectId": 5,
 			"projectName": "Portfolio Website (Angular Version)",
 			"projectDescription": "A Personally Desinged Portfolio Website With a Modern Look and Feel, with Automatic Project Info Population from JSON Schemas",
 			"projectSubDesc": "Originally for Rose-Hulman CSSE280, Further Worked On Personally",
-			"projectLanguage": ["HTML5", "Sass", "TypeScript"],
-			"projectLibraries": ["Angular 12, Angular Material, NerdFonts"],
+			"projectLanguage": [
+				"HTML5",
+				"Sass",
+				"TypeScript"
+			],
+			"projectLibraries": [
+				"Angular 12, Angular Material, NerdFonts"
+			],
 			"projectAsset": "portfolio.webp",
 			"projectLinks": [
 				{
@@ -76,79 +142,148 @@
 					"linkURL": "https://github.com/FaceFTW/FaceFTW.github.io/tree/angular"
 				}
 			],
-			"projectStatus": { "status": "Finished" }
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 6,
 			"projectName": "-STRIVE- Stats",
 			"projectDescription": "Web-Based Match Data Tracker for GUILTY GEAR -STRIVE-",
 			"projectSubDesc": "For Rose-Hulman CSSE280 (Retake)",
-			"projectLanguage": ["TypeScript, CSS3"],
-			"projectLibraries": ["ReactJS", "MUI", "Firebase (via react-fire)"],
+			"projectLanguage": [
+				"TypeScript, CSS3"
+			],
+			"projectLibraries": [
+				"ReactJS",
+				"MUI",
+				"Firebase (via react-fire)"
+			],
 			"projectAsset": "strivestats.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/strive-stats" },
-				{ "linkType": "demo", "linkURL": "https://strive-stats.faceftw.dev" },
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/strive-stats"
+				},
+				{
+					"linkType": "demo",
+					"linkURL": "https://strive-stats.faceftw.dev"
+				},
 				{
 					"linkType": "misc",
 					"linkURL": "https://rosehulmanprojectvault.org/project/-N401Wni1nsf9F8lcEQ0",
 					"linkDesc": "Rose-Hulman Project Vault"
 				}
 			],
-			"projectStatus": { "status": "Finished" }
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 7,
 			"projectName": "DesignLint",
 			"projectDescription": "A Relatively Simple Java Linter Wtih Style/OOP Principle Violations and Design Pattern Detection",
 			"projectSubDesc": "For Rose-Hulman CSSE374: Software Design, Further Worked on in CSSE375: Software Construction and Evolution",
-			"projectLanguage": ["Java 8 (Maven)"],
-			"projectLibraries": ["OW2 ASM", "JUnit (Testing)"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/DesignLint" }],
+			"projectLanguage": [
+				"Java 8 (Maven)"
+			],
+			"projectLibraries": [
+				"OW2 ASM",
+				"JUnit (Testing)"
+			],
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/DesignLint"
+				}
+			],
 			"projectAsset": "designlint.webp",
-			"projectStatus": { "status": "Finished" }
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 8,
 			"projectName": "OpenCryptoBench",
 			"projectDescription": "Rudimentary Cryptograhy Algorithm Benchmark Written in Java (Like *really* basic)",
 			"projectSubDesc": "Personal Project: The First one that is Open-Source",
-			"projectLanguage": ["Java 8"],
-			"projectLibraries": ["Bouncy Castle (Java Variant)"],
+			"projectLanguage": [
+				"Java 8"
+			],
+			"projectLibraries": [
+				"Bouncy Castle (Java Variant)"
+			],
 			"projectAsset": "opencryptobench.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/OpenCryptoBench" }],
-			"projectStatus": { "status": "Archived", "reason": "No Longer in Development" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/OpenCryptoBench"
+				}
+			],
+			"projectStatus": {
+				"status": "Archived",
+				"reason": "No Longer in Development"
+			}
 		},
 		{
 			"projectId": 9,
 			"projectName": "Team Thunderbirds ECE160 Robot",
 			"projectDescription": "Specialized Arduino Firmware to Remotely Operate a Robot for Rose-Hulman's Annual ECE160 Competition for Freshman",
 			"projectSubDesc": "For Rose-Hulman ECE160 - Engineering Practice",
-			"projectLanguage": ["C", "C++"],
-			"projectLibraries": ["Arduino", "Stepper Motor HAL", "PS2 Controller HAL"],
+			"projectLanguage": [
+				"C",
+				"C++"
+			],
+			"projectLibraries": [
+				"Arduino",
+				"Stepper Motor HAL",
+				"PS2 Controller HAL"
+			],
 			"projectAsset": "ece160.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/Thunderbirds-ECE160/Final-Robot" }],
-			"projectStatus": { "status": "Finished" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/Thunderbirds-ECE160/Final-Robot"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished"
+			}
 		},
 		{
 			"projectId": 10,
 			"projectName": "Scavlander's Gamepad",
 			"projectDescription": "Attempt at a \"Apocalypse\"-styled Gamepad powered by the TI MSP432 Launchpad with CC2650 Boosterpack",
 			"projectSubDesc": "For Rose-Hulman ECE230 - Embedded Systems",
-			"projectLanguage": ["C"],
-			"projectLibraries": ["TI-RTOS (For MSP432)", "TI MSP432/CC2650 Bluetooth Stack"],
+			"projectLanguage": [
+				"C"
+			],
+			"projectLibraries": [
+				"TI-RTOS (For MSP432)",
+				"TI MSP432/CC2650 Bluetooth Stack"
+			],
 			"projectAsset": "scavlander.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/scavlanders-gamepad" }
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/scavlanders-gamepad"
+				}
 			],
-			"projectStatus": { "status": "Archived", "reason": "No Longer in Active Development" }
+			"projectStatus": {
+				"status": "Archived",
+				"reason": "No Longer in Active Development"
+			}
 		},
 		{
 			"projectId": 11,
 			"projectName": "AVeraCoolRPG",
 			"projectDescription": "A Discord Bot for playing a really basic RPG with SQL Server Data Storage",
 			"projectSubDesc": "For Rose-Hulman CSSE333: Intro to Database Systems, May contribute in the future",
-			"projectLanguage": ["Node.JS (16.x)", "Transact-SQL", "Powershell (DB Deploy Script Only)"],
+			"projectLanguage": [
+				"Node.JS (16.x)",
+				"Transact-SQL",
+				"Powershell (DB Deploy Script Only)"
+			],
 			"projectLibraries": [
 				"Discord.JS",
 				"mssql (Node.JS package)",
@@ -157,92 +292,233 @@
 			],
 			"projectAsset": "rpgbot.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/jthorp07/rpgbot" },
-				{ "linkType": "text", "text": "\n(Repo not public yet)" }
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/jthorp07/rpgbot"
+				},
+				{
+					"linkType": "text",
+					"text": "\n(Repo not public yet)"
+				}
 			],
-			"projectStatus": { "status": "Finished", "reason": "No Longer Actively Contributing" }
+			"projectStatus": {
+				"status": "Finished",
+				"reason": "No Longer Actively Contributing"
+			}
 		},
 		{
 			"projectId": 12,
 			"projectName": "ThinkPad+ Rainmeter Skin",
 			"projectDescription": "A customized Rainmeter Skin for my Thinkpad P1 Gen 1",
 			"projectSubDesc": "Personal Project",
-			"projectLanguage": ["Rainmeter Configuration"],
-			"projectLibraries": ["N/A"],
+			"projectLanguage": [
+				"Rainmeter Configuration"
+			],
+			"projectLibraries": [
+				"N/A"
+			],
 			"projectAsset": "thinkpadplus.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/ThinkPadPlus_RainmeterSkin" },
-				{ "linkType": "text", "text": " (Repo not public yet)" }
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/ThinkPadPlus_RainmeterSkin"
+				},
+				{
+					"linkType": "text",
+					"text": " (Repo not public yet)"
+				}
 			],
-			"projectStatus": { "status": "Active Development" }
+			"projectStatus": {
+				"status": "Active Development"
+			}
 		},
 		{
 			"projectId": 13,
 			"projectName": "PSTweetTemplate",
 			"projectDescription": "A Powershell Module for Automatically sending out tweets based on a template using BluebirdPS",
 			"projectSubDesc": "Personal Project",
-			"projectLanguage": ["Powershell"],
-			"projectLibraries": ["BluebirdPS"],
+			"projectLanguage": [
+				"Powershell"
+			],
+			"projectLibraries": [
+				"BluebirdPS"
+			],
 			"projectAsset": "pstweettemplate.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/PSTweetTemplate" }],
-			"projectStatus": { "status": "Suspended", "reason": "No Current Motivation" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/PSTweetTemplate"
+				}
+			],
+			"projectStatus": {
+				"status": "Suspended",
+				"reason": "No Current Motivation"
+			}
 		},
 		{
 			"projectId": 14,
 			"projectName": "PipeLayer",
 			"projectDescription": "A Twitter Bot that posts screenshots of a Linux port of the 3D Pipes screensaver",
 			"projectSubDesc": "Personal Project",
-			"projectLanguage": ["C, Docker, "],
-			"projectLibraries": ["OpenGL (GLX)"],
+			"projectLanguage": [
+				"C or Rust (Possibly Porting), Docker"
+			],
+			"projectLibraries": [
+				"OpenGL (GLX)"
+			],
 			"projectAsset": "3dpipes.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/gl-pipes" }],
-			"projectStatus": { "status": "Active Development" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/gl-pipes"
+				}
+			],
+			"projectStatus": {
+				"status": "Active Development"
+			}
 		},
 		{
 			"projectId": 15,
 			"projectName": "Portfolio Website",
 			"projectDescription": "This website, rewritten with ReactJS (because why not)",
 			"projectSubDesc": "Personal Project",
-			"projectLanguage": ["TypeScript", "JSON Schema"],
-			"projectLibraries": ["ReactJS", "MUI", "React-Icons", "React-Router", "And more"],
+			"projectLanguage": [
+				"TypeScript",
+				"JSON Schema"
+			],
+			"projectLibraries": [
+				"ReactJS",
+				"MUI",
+				"React-Icons",
+				"React-Router",
+				"And more"
+			],
 			"projectAsset": "portfolionew.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/FaceFTW.github.io" }
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/FaceFTW.github.io"
+				}
 			],
-			"projectStatus": { "status": "Active Development" }
+			"projectStatus": {
+				"status": "Active Development"
+			}
 		},
 		{
 			"projectId": 16,
 			"projectName": "Dotfiles",
 			"projectDescription": "A collection of scripts/configs I use for development. Includes a Neovim config",
 			"projectSubDesc": "Personal projects",
-			"projectLanguage": ["Powershell", "ZSH", "VimScript (Neovim)"],
-			"projectLibraries": ["Chezmoi"],
+			"projectLanguage": [
+				"Powershell",
+				"ZSH",
+				"VimScript (Neovim)"
+			],
+			"projectLibraries": [
+				"Chezmoi"
+			],
 			"projectAsset": "dotfiles.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/dotfiles" }],
-			"projectStatus": { "status": "Active Development" }
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/dotfiles"
+				}
+			],
+			"projectStatus": {
+				"status": "Active Development"
+			}
 		},
 		{
 			"projectId": 17,
 			"projectName": "JFTP \"Scuffed\" Edition",
 			"projectDescription": "A \"Scuffed\" and \"Updated\" version of the JFTP project, originally from SourceForge",
 			"projectSubDesc": "For Rose-Hulman CSSE477 - Software Architecture",
-			"projectLanguage": ["Java"],
-			"projectLibraries": ["See Repo"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/jftp-scuffed" }],
-			"projectStatus": { "status": "Finished" },
+			"projectLanguage": [
+				"Java"
+			],
+			"projectLibraries": [
+				"See Repo"
+			],
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/jftp-scuffed"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished"
+			},
 			"projectAsset": "jftp.webp"
 		},
 		{
 			"projectId": 18,
 			"projectName": "RetireSimple",
-			"projectDescription": "Open-Source Serverless Retirement Modeling Solution Designed for Extensibility",
-			"projectSubDesc": "For Rose-Hulman Senior Project (CSSE497-499)",
-			"projectLanguage": ["C# (.NET 6)", "TypeScript"],
-			"projectLibraries": ["ASP.NET Core 6", "Entity Framework Core 6", "Math.NET", "ReactJS"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/RetireSimple" }],
-			"projectStatus": { "status": "Active Development" },
+			"projectDescription": "Open-Source Retirement Modeling Solution Designed for Extensibility",
+			"projectSubDesc": "For Rose-Hulman Senior Project (CSSE497-499), Advising Development with Next Team",
+			"projectLanguage": [
+				"C# (.NET 6)",
+				"TypeScript"
+			],
+			"projectLibraries": [
+				"ASP.NET Core 6",
+				"Entity Framework Core 6",
+				"Math.NET",
+				"ReactJS"
+			],
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/RetireSimple/RetireSimple"
+				}
+			],
+			"projectStatus": {
+				"status": "Active Development"
+			},
 			"projectAsset": "retiresimple.webp"
+		},
+		{
+			"projectId": 19,
+			"projectName": "Settlers of Catan",
+			"projectDescription": "A Java Implementation of the Settlers of Catan with focuses on QA and Testing",
+			"projectSubDesc": "For Rose-Hulman CSSE376 - Software Quality Assurance",
+			"projectLanguage": [
+				"Java"
+			],
+			"projectLibraries": [
+				"N/A"
+			],
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/settlers-of-catan"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished"
+			},
+			"projectAsset": "settlers.webp"
+		},
+		{
+			"projectId": 20,
+			"projectName": "xv6 Signals",
+			"projectDescription": "A fork of xv6 with added support for rudimentary signal handling",
+			"projectSubDesc": "For Rose-Hulman CSSE332 - Operating Systems",
+			"projectLanguage": [
+				"C"
+			],
+			"projectLibraries": [
+				"xv6 Kernel"
+			],
+			"projectLinks": [
+				{
+					"linkType": "github",
+					"linkURL": "https://github.com/FaceFTW/xv6-signals"
+				}
+			],
+			"projectStatus": {
+				"status": "Finished"
+			},
+			"projectAsset": "xv6.webp"
 		}
 	]
 }
