--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 7
+          version: 8
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -24,7 +24,7 @@ jobs:
           cache: pnpm
           cache-dependency-path: ./pnpm-lock.yaml
       - name: Load Project Dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Run Build
         run: pnpm run build
       - name: Deploy to Firebase Hosting (Preview)
@@ -43,7 +43,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 7
+          version: 8
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -51,7 +51,7 @@ jobs:
           cache: pnpm
           cache-dependency-path: pnpm-lock.yaml
       - name: Load Project Dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
       - name: Run Build
         run: pnpm build
       - name: Deploy to Firebase
@@ -62,9 +62,9 @@ jobs:
           projectId: portfolio-web-1cc78
           channelId: live
       - uses: actions/upload-pages-artifact@v1.0.7
-        with: 
+        with:
           path: dist
-      
+
   github-pages:
     name: GitHub Pages
     runs-on: ubuntu-latest
@@ -78,5 +78,5 @@ jobs:
     steps:
       - uses: actions/deploy-pages@v1.2.4
         id: gh-deploy
-      
-        
+
+
