--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,20 +13,16 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v3
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: pnpm
-          cache-dependency-path: ./pnpm-lock.yaml
+          node-version: 20
+          cache: npm
+          cache-dependency-path: ./package-lock.json
       - name: Load Project Dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install --frozen-lockfile
       - name: Run Build
-        run: pnpm run build
+        run: npm run build
       - name: Deploy to Firebase Hosting (Preview)
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
@@ -40,20 +36,17 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event_name != 'pull_request'
     steps:
       - uses: actions/checkout@v3
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: pnpm
+          cache: npm
           cache-dependency-path: pnpm-lock.yaml
       - name: Load Project Dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm install --frozen-lockfile
       - name: Run Build
-        run: pnpm build
+        run: npm build
       - name: Deploy to Firebase
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
