--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: pnpm-lock.yaml
+          cache-dependency-path: package-lock.json
       - name: Load Project Dependencies
         run: npm install --frozen-lockfile
       - name: Run Build
