Add Shadcn/ui components for next redesign

--- a/package.json
+++ b/package.json
@@ -13,7 +13,17 @@
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.2",
+		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-hover-card": "^1.1.1",
+		"@radix-ui/react-scroll-area": "^1.1.0",
+		"@radix-ui/react-separator": "^1.1.0",
+		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.1",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.1.5",
 		"framer-motion": "^11",
+		"lucide-react": "^0.396.0",
 		"mui-image": "^1.0.7",
 		"prop-types": "^15.8.1",
 		"react": "^18",
@@ -21,6 +31,8 @@
 		"react-icons": "^5",
 		"react-material-ui-carousel": "^3.4.2",
 		"react-router-dom": "^6.21.1",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
 		"typewriter-effect": "^2.21.0"
 	},
 	"devDependencies": {
@@ -33,6 +45,7 @@
 		"@typescript-eslint/eslint-plugin": "^6",
 		"@typescript-eslint/parser": "^6",
 		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8",
 		"eslint-config-standard-with-typescript": "^43.0.0",
 		"eslint-plugin-import": "^2.29.1",
@@ -40,7 +53,9 @@
 		"eslint-plugin-prettier": "^5",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.33.2",
+		"postcss": "^8.4.38",
 		"prettier": "^3",
+		"tailwindcss": "^3.4.4",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10"
 	}
