--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.15.2",
 		"@radix-ui/react-accordion": "^1.2.0",
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-hover-card": "^1.1.1",
 		"@radix-ui/react-scroll-area": "^1.1.0",
 		"@radix-ui/react-separator": "^1.1.0",
