--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"eslint-plugin-react": "^7.33.2",
 		"postcss": "^8.4.38",
 		"prettier": "^3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10"
