--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-tooltip": "^1.1.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-autoplay": "^8.1.5",
 		"embla-carousel-react": "^8.1.5",
 		"framer-motion": "^11",
 		"lucide-react": "^0.396.0",
