--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:react/recommended",
-		"plugin:prettier/recommended"
+		"plugin:prettier/recommended",
+		"plugin:import/recommended",
+		"plugin:@typescript-eslint/recommended"
 	],
 	"parserOptions": {
 		"ecmaVersion": "latest",
@@ -16,11 +18,21 @@
 		"react"
 	],
 	"rules": {
-		"no-unused-vars": ["warn"],
-		"no-console": ["warn"],
-		"no-undef": ["warn"],
-		"no-constant-condition": ["warn"],
-		"prefer-spread": ["error"]
+		"no-unused-vars": [
+			"warn"
+		],
+		"no-console": [
+			"warn"
+		],
+		"no-undef": [
+			"warn"
+		],
+		"no-constant-condition": [
+			"warn"
+		],
+		"prefer-spread": [
+			"error"
+		]
 	},
 	"settings": {
 		"react": {
