--- a/package.json
+++ b/package.json
@@ -34,20 +34,13 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.7",
+		"@biomejs/biome": "1.8.3",
 		"@types/node": "^20.10.5",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"@typescript-eslint/eslint-plugin": "^6",
-		"@typescript-eslint/parser": "^6",
 		"@vitejs/plugin-react": "^4.2.1",
 		"autoprefixer": "^10.4.19",
-		"eslint": "^8",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-prettier": "^5",
-		"eslint-plugin-react": "^7.33.2",
 		"postcss": "^8.4.38",
-		"prettier": "^3",
-		"prettier-plugin-tailwindcss": "^0.6.5",
 		"tailwindcss": "^3.4.4",
 		"typescript": "^5.3.3",
 		"vite": "^5.0.10"
