Initial Relinting with Biome Config

--- a/biome.json
+++ b/biome.json
@@ -110,7 +110,7 @@
 			"semicolons": "always",
 			"arrowParentheses": "always",
 			"bracketSpacing": true,
-			"bracketSameLine": false,
+			"bracketSameLine": true,
 			"quoteStyle": "single",
 			"attributePosition": "auto"
 		}
